[build-system]
requires = [
  "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-kuunda"
description = "pytest plugin to help with test data setup for PySpark tests"
version = "0.1.0"
readme = "README.rst"
requires-python = ">=3.8"
authors = [
    { name = "Sven Hofstede", email = "info@svenhofstede.com" },
]
maintainers = [
    { name = "Sven Hofstede", email = "info@svenhofstede.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Framework :: Pytest",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pytest>=6.2.0",
]
[project.urls]
Repository = "https://github.com/svenhofstede/pytest-kuunda"
Homepage = "https://github.com/svenhofstede/pytest-kuunda"
[project.entry-points.pytest11]
django = "pytest_kuunda.plugin"
